--- a/progettoiseo/pagine_statiche/templates/layouts/components/head.html
+++ b/progettoiseo/pagine_statiche/templates/layouts/components/head.html
@@ -5,8 +5,33 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" />
 
     <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+        crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    
+    <style>
+        /* Custom styles for logout button in dropdown */
+        .logout-btn {
+            background: none !important;
+            border: none !important;
+            padding: 0.375rem 1rem !important;
+            color: inherit !important;
+            text-align: left !important;
+            width: 100% !important;
+            cursor: pointer !important;
+        }
+        
+        .logout-btn:hover {
+            background-color: var(--bs-dropdown-link-hover-bg) !important;
+            color: var(--bs-dropdown-link-hover-color) !important;
+        }
+        
+        .logout-btn:focus {
+            outline: none !important;
+            background-color: var(--bs-dropdown-link-hover-bg) !important;
+        }
+    </style>
 </head>
