--- a/progettoiseo/accounts/templates/profilo.html
+++ b/progettoiseo/accounts/templates/profilo.html
@@ -10,6 +10,15 @@
                 <h3 class="mb-0">Gestisci il tuo Profilo</h3>
             </div>
             <div class="card-body">
+                {% if messages %}
+                    {% for message in messages %}
+                        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                            {{ message }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    {% endfor %}
+                {% endif %}
+                
                 {% if profilo_utente.immagine_profilo %}
                 <div class="text-center mb-3">
                     <img src="{{ profilo_utente.immagine_profilo.url }}" alt="Foto profilo attuale" 
@@ -45,6 +54,14 @@
                         {% if form.email.errors %}
                             <div class="text-danger">{{ form.email.errors }}</div>
                         {% endif %}
+                    </div>
+                    
+                    <div class="mb-3">
+                        <label for="{{ form.password.id_for_label }}" class="form-label">
+                            Password
+                        </label>
+                        <!-- <a href="{% url 'password_change' %}" class="btn btn-primary">Cambia Password</a> -->
+                        <a href="{% url 'modifica-password' %}" class="btn btn-primary">Cambia Password</a>
                     </div>
                     
                     <div class="mb-3">
