--- a/progettoiseo/accounts/templates/registration/logout.html
+++ b/progettoiseo/accounts/templates/registration/logout.html
@@ -38,4 +38,18 @@
             </div>
         </div>
     </div>
+
+    <script>
+        // Auto-dismiss alert after 5 seconds
+        document.addEventListener('DOMContentLoaded', function() {
+            const alerts = document.querySelectorAll('.alert');
+            alerts.forEach(function(alert) {
+                setTimeout(function() {
+                    const bsAlert = new bootstrap.Alert(alert);
+                    bsAlert.close();
+                }, 5000);
+            });
+        });
+    </script>
 </div>
+{% endblock %}
