--- a/progettoiseo/pagine_statiche/templates/layouts/components/navbar.html
+++ b/progettoiseo/pagine_statiche/templates/layouts/components/navbar.html
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/home">Progettoiseo</a>
+    <a class="navbar-brand" href="/home">
+        <img src="/media/logo_progettoiseo.png" alt="Logo Progettoiseo" width="64" height="64" />
+    </a>
     <button
         class="navbar-toggler"
         type="button"
@@ -13,15 +15,33 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="/books">Articoli</a></li>
-            <li class="nav-item"><a class="nav-link" href="/authors">Eventi</a></li>
-            <li class="nav-item"><a class="nav-link" href="/genres">Chi siamo</a></li>
+            <li class="nav-item"><a class="nav-link" href="/articoli">Articoli</a></li>
+            <li class="nav-item"><a class="nav-link" href="/eventi">Eventi</a></li>
+            <div class="nav-item dropdown">
+                <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="navbarDropdown"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                >
+                Chi siamo
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="/home/storia">Storia</a></li>
+                    <li><hr class="dropdown-divider" /></li>
+                    <li><a class="dropdown-item" href="/home/direttivo">Direttivo</a></li>
+                    <li><hr class="dropdown-divider" /></li>
+                    <li><a class="dropdown-item" href="/home/contatti">Contatti</a></li>
+                </ul>
+            </div>
         </ul>
     </div>
     <div class="navbar-nav ms-auto">
         {% if user.is_authenticated %}
+        <span class="navbar-text me-3">Ciao, {{ user.first_name|default:user.username }}!</span>
         <div class="nav-item dropdown">
-            <span class="navbar-text me-3">Ciao, {{ user.first_name|default:user.username }}!</span>
             <a
                 class="nav-link dropdown-toggle"
                 href="#"
