--- a/progettoiseo/accounts/templates/registration/login.html
+++ b/progettoiseo/accounts/templates/registration/login.html
@@ -53,14 +53,14 @@
                         </div>
                     </form>
                     
-                    <hr class="my-4">
+                    <!-- <hr class="my-4">
                     
                     <div class="text-center">
                         <p class="mb-0">Non hai ancora un account?</p>
                         <a href="{% url 'registrazione' %}" class="btn btn-outline-secondary">
                             <i class="fas fa-user-plus"></i> Registrati
                         </a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
