Aggiunti url, view, html per dettagli articolo

--- a/progettoiseo/articoli/templates/article_confirm_delete.html
+++ b/progettoiseo/articoli/templates/article_confirm_delete.html
@@ -5,7 +5,7 @@
   <p>Are you sure you want to delete "{{ object.title }} "?</p>
   <form method="post">{% csrf_token %}
     <button type="submit" class="btn btn-danger">Yes, delete</button>
-    <a href="{% url 'book-list' %}" class="btn btn-secondary">Cancel</a>
+    <a href="{% url 'article-list' %}" class="btn btn-secondary">Cancel</a>
   </form>
 </div>
 {% endblock %}
