--- a/progettoiseo/pagine_statiche/templates/layouts/components/navbar.html
+++ b/progettoiseo/pagine_statiche/templates/layouts/components/navbar.html
@@ -56,6 +56,7 @@
                     class="rounded-circle"
                     width="32"
                     height="32"
+                    onerror="this.src='/media/accounts/foto_profilo_base.png';"
                 />
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
